--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@chakra-ui/react": "^1.3.4",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "date-fns": "^2.19.0",
     "framer-motion": "^3.10.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "^10.0.3",
     "next-images": "1.6.2",
     "next-seo": "^4.19.0",
@@ -20,6 +22,7 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
     "@types/webpack-env": "^1.16.0",
