--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "framer-motion": "^3.10.0",
     "jsonwebtoken": "^8.5.1",
     "next": "^10.0.3",
-    "next-images": "1.6.2",
+    "next-images": "^1.7.0",
     "next-seo": "^4.19.0",
     "nextjs-sitemap-generator": "^1.3.0",
     "react": "17.0.1",
