--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "next-seo": "^4.19.0",
     "nextjs-sitemap-generator": "^1.3.0",
     "react": "17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
+    "@types/react-redux": "^7.1.16",
     "@types/webpack-env": "^1.16.0",
     "typescript": "^4.1.3"
   }
