--- a/package.json
+++ b/package.json
@@ -1,35 +1,42 @@
 {
-  "name": "opencovidperu2-web",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "build": "next build",
-    "start": "next start",
-    "watch": "next dev"
-  },
-  "dependencies": {
-    "@chakra-ui/react": "^1.3.4",
-    "@emotion/react": "^11.1.5",
-    "@emotion/styled": "^11.1.5",
-    "date-fns": "^2.19.0",
-    "framer-motion": "^3.10.0",
-    "jsonwebtoken": "^8.5.1",
-    "next": "^10.0.3",
-    "next-images": "^1.7.0",
-    "next-seo": "^4.19.0",
-    "nextjs-sitemap-generator": "^1.3.0",
-    "react": "17.0.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.9"
-  },
-  "devDependencies": {
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/node": "^14.14.25",
-    "@types/react": "^17.0.1",
-    "@types/react-redux": "^7.1.16",
-    "@types/webpack-env": "^1.16.0",
-    "typescript": "^4.1.3"
-  }
+    "name": "opencovidperu2-web",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "build": "next build",
+        "start": "next start",
+        "watch": "next dev",
+        "dev": "next dev",
+        "generate": "graphql-codegen -c codegen.gql.yaml"
+    },
+    "dependencies": {
+        "@chakra-ui/react": "^1.3.4",
+        "@emotion/react": "^11.1.5",
+        "@emotion/styled": "^11.1.5",
+        "date-fns": "^2.19.0",
+        "framer-motion": "^3.10.0",
+        "graphql": "^15.5.0",
+        "jsonwebtoken": "^8.5.1",
+        "next": "^10.0.3",
+        "next-images": "^1.7.0",
+        "next-seo": "^4.19.0",
+        "nextjs-sitemap-generator": "^1.3.0",
+        "react": "17.0.1",
+        "react-dom": "^17.0.1",
+        "react-redux": "^7.2.2",
+        "redux": "^4.0.5",
+        "redux-devtools-extension": "^2.13.9"
+    },
+    "devDependencies": {
+        "@graphql-codegen/cli": "^1.21.2",
+        "@graphql-codegen/typescript": "^1.21.1",
+        "@graphql-codegen/typescript-operations": "^1.17.15",
+        "@graphql-codegen/typescript-urql": "^2.0.4",
+        "@types/jsonwebtoken": "^8.5.0",
+        "@types/node": "^14.14.25",
+        "@types/react": "^17.0.1",
+        "@types/react-redux": "^7.1.16",
+        "@types/webpack-env": "^1.16.0",
+        "typescript": "^4.1.3"
+    }
 }
