--- a/codegen.gql.yaml
+++ b/codegen.gql.yaml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: "https://hasura.opencovid2.tk/graphql"
+schema: "https://hasura.opencovid2.tk/v1/graphql"
 documents: "./src/graphql/**/*.graphql"
 generates:
   src/integration/graphql.tsx:
