--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "react-dom": "^17.0.1",
         "react-redux": "^7.2.2",
         "redux": "^4.0.5",
-        "redux-devtools-extension": "^2.13.9"
+        "redux-devtools-extension": "^2.13.9",
+        "urql": "^2.0.1"
     },
     "devDependencies": {
         "@graphql-codegen/cli": "^1.21.2",
